# bitris-solver-vite

./: .eslintrc.cjs  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: pages.yml  rust.yml  typescript.yml
src/: App.tsx  Board.css  Board.tsx  BoardData.ts  Solver.tsx  main.tsx
wasm/: Cargo.toml
wasm/src/: lib.rs
