[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.87"
bitris_commands = { git = "https://github.com/knewjade/bitris-commands", rev = "f2f6348285209bf22bf5e4f6b6a277767a163f2d" }
