[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.87"
bitris_commands = { git = "https://github.com/minus3theta/bitris-commands", rev = "dda786e737ab730e8dea2363657aad0670771f63" }
anyhow = "1.0.75"
